@@ -1,6 +1,5 @@
 package com.github.chenqimiao.repository;
 
-import com.github.chenqimiao.DO.ArtistDO;
 import com.github.chenqimiao.DO.SongDO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.EmptyResultDataAccessException;
@@ -12,7 +11,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
@@ -30,7 +28,7 @@ public class SongRepository {
 
     public List<SongDO> findByAlbumId(Integer alumId) {
         String sql = """
-                        select * from song where album_id = ?
+                        select * from song where `album_id` = ?
                      """;
         return jdbcTemplate.query(sql, new BeanPropertyRowMapper<>(SongDO.class), alumId);
     }
@@ -39,7 +37,7 @@ public class SongRepository {
 
         try {
             String sql = """
-                        select * from song where id = ?
+                        select * from song where `id` = ?
                      """;
             return jdbcTemplate.queryForObject(sql, new BeanPropertyRowMapper<>(SongDO.class), songId);
         }catch (EmptyResultDataAccessException e) {
@@ -51,34 +49,34 @@ public class SongRepository {
     public SongDO findByTitleAndArtistName(String songTitle, String artistName) {
 
         String sql = """
-                        select * from song where title = ? and artist_name= ?
+                        select * from song where `title` = ? and `artist_name`= ?
                      """;
         List<SongDO> songs = jdbcTemplate.query(sql, new BeanPropertyRowMapper<>(SongDO.class), songTitle, artistName);
 
         if (CollectionUtils.isEmpty(songs)) {
             return null;
         }
-        return songs.get(0);
+        return songs.getFirst();
     }
 
 
     public SongDO findByTitle(String songTitle) {
 
         String sql = """
-                        select * from song where title = ? 
+                        select * from song where `title` = ?
                      """;
         List<SongDO> songs = jdbcTemplate.query(sql, new BeanPropertyRowMapper<>(SongDO.class), songTitle);
 
         if (CollectionUtils.isEmpty(songs)) {
             return null;
         }
-        return songs.get(0);
+        return songs.getFirst();
     }
 
     public List<SongDO> findByArtistId(Integer artistId) {
 
         String sql = """
-                        select * from song where artist_id = ?
+                        select * from song where `artist_id` = ?
                      """;
         return jdbcTemplate.query(sql, new BeanPropertyRowMapper<>(SongDO.class), artistId);
     }
@@ -86,7 +84,7 @@ public class SongRepository {
 
     public List<SongDO> searchByTitle(String songTitle, Integer pageSize, Integer offset) {
         String sql = """
-                        select * from song where title like ? limit ?,?;
+                        select * from song where `title` like ? limit ?, ?;
                      """;
         return jdbcTemplate.query(sql, new BeanPropertyRowMapper<>(SongDO.class),
                 "%"+songTitle +"%", offset, pageSize);
@@ -102,7 +100,7 @@ public class SongRepository {
 
     public void deleteByIds(List<Integer> ids) {
         String sql = """
-                       delete from song where id in (?)
+                       delete from song where `id` in (?)
                      """;
          jdbcTemplate.update(sql, String.join(",", ids.stream()
                  .map(Object::toString)  // 将 Integer 转为 String
@@ -111,12 +109,12 @@ public class SongRepository {
 
     public void save(SongDO songDO) {
         String sql =  """
-                        insert into song(parent, title, album_id, artist_id, 
+                        insert into song(parent, title, album_id, artist_id,
                                          artist_name, size, suffix, content_type,
-                                         year, duration, bit_rate,file_path, 
+                                         year, duration, bit_rate,file_path,
                                          file_hash, file_last_modified)
-                          values(:parent, :title, :album_id, :artist_id, 
-                                 :artist_name, :size, :suffix, :content_type, :year, 
+                          values(:parent, :title, :album_id, :artist_id,
+                                 :artist_name, :size, :suffix, :content_type, :year,
                                  :duration, :bit_rate, :file_path, :file_hash, :file_last_modified)
                      """;
                 namedParameterJdbcTemplate.update(sql, new BeanPropertySqlParameterSource(songDO));
